# pigarage

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
src/pigarage/: __init__.py  config.py  neopixel.py  ocr_detector.py  plate_detector.py  server.py
tests/: test_ocr_detector.py  test_plate_detector.py  test_server.py
