[project]
name = "pigarage"
version = "0.1.0"
description = "Garage Home Automation with license plate recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.128.0",
    "huggingface-hub>=1.2.2",
    "opencv-python>=4.12.0.88",
    "paho-mqtt>=2.1.0",
    "ultralytics>=8.3.236",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.9"]
raspi = ["picamera2>=0.3.33", "spidev>=3.8"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
pigarage = "pigarage.__main__:main"
pigarage-ocr-detector = "pigarage.ocr_detector:main"
pigarage-plate-detector = "pigarage.plate_detector:main"
pigarage-server = "pigarage.server:main"

[tool.uv]
package = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A001",   # Variable is shadowing a Python builtin
    "A002",   # Function argument is shadowing a Python builtin
    "COM812", # Missing trailing comma in a single-element tuple
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public module
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D212",   # Multi-line docstring summary should start at the first line (conflicts with D213)
    "EM102",  # Exception must not use an f-string literal
    "G004",   # Logging statement uses f-string
    "S101",   # Use of `assert` detected
    "S113",   # Probable use of `requests` call without timeoutRuff
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM101",  # Exception must not use a string literal
]
